--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.1.0",
     "sheryjs": "^1.0.0-beta.0.1.7",
     "tailwind-merge": "^2.3.0"
   },
